# gpuintegration

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
CubaVegas/: #CMakeLists.txt#  CMakeLists.txt  Genz.cc
cubacpp/test/: .gitignore  CMakeLists.txt  integrand.test.cc  integrand_traits.test.cc  integration.test.cc  integration_volume.test.cc  performance_comparison.cc  performance_comparison2.cc  two_d_plot.cc
cuda-backend/: CMakeLists.txt
cuda-backend/oneAPI/: CMakeLists.txt  integrands.hpp
cudaCuhre/: .gitignore  CMakeLists.txt  Makefile  cudaCuhre.cu  function.cu  function.cuh  test.cu
cudaCuhre/demos/: B8_15.cu  B8_22.cu  B_15cpu.cc  B_22cpu.cc  CMakeLists.txt  FigureGenerator.R  Gauss9D.cu  Gauss9Dcpu.cc  Genz1_8D.cu  Genz2_2D.cu  Genz2_6D.cc  Genz2_6D.cu  Genz2_8D.cu  Genz3_3D.cc  Genz3_3D.cu  Genz3_6D.cc  Genz3_6D.cu  Genz3_8D.cc  Genz3_8D.cu  Genz4_5D.cc  Genz4_5D.cu  Genz4_8D.cu  Genz5_2D.cc  Genz5_2D.cu  Genz5_5D.cc  Genz5_5D.cu  Genz5_8D.cc  Genz5_8D.cu  Genz6_2D.cc  Genz6_2D.cu  Genz6_6D.cc  Genz6_6D.cu  Init_Region_Pool.cu  SinSum5D.cu  SinSum6D.cc  SinSum6D.cu  absCosSum5D.cu  absCosSum5Dcpu.cc  absCosSum5Dplus1.cu  absCosSum5Dplus1cpu.cc  (+15 more)
cudaCuhre/integrands/: hmf_t.cuh  scalarIntegrandSigma.cuh  sig_miscent.cuh  sig_sum.cuh
cudaCuhre/quad/: deviceProp.h  quad.h
cudaCuhre/tests/: B8_15.cu  B8_22.cu  B_15cpu.cc  B_22cpu.cc  BoxIntegrals.cu  CMakeLists.txt  FourthDividedDifference.cu  Gauss9D.cu  Gauss9Dcpu.cc  Genz2_6D.cc  Genz3_3D.cc  Genz3_6D.cc  Genz3_6D.cu  Genz3_8D.cc  Genz4_5D.cc  Genz4_5D.cu  Genz5_2D.cc  Genz5_2D.cu  Genz6_2D.cc  Genz6_2D.cu  Genz6_6D.cc  Genz6_6D.cu  RegionSampling.cu  SinSum6D.cc  absCosSum5D.cu  absCosSum5Dcpu.cc  absCosSum5Dplus1.cu  absCosSum5Dplus1cpu.cc  cudaCuhre.cu  demo_utils.h  fun6d_demo.cc  fun6d_test.cc  function.cuh  genz_1_8d.cu  genz_1abs_5d.cc  genz_1abs_5d.cu  hello.cu  interpolation.cc  test_cuhre_convergence.cu  test_volume.cu
cudaPagani/: CMakeLists.txt
cudaPagani/demos/: B2_12.cu  B8_15.cu  B8_22.cu  CMakeLists.txt  Gauss9D.cu  Gauss9Dfloat.cu  Genz1_8D.cu  Genz1_8Dfloat.cu  Genz2_2D.cu  Genz2_6D.cu  Genz2_8D.cu  Genz3_3D.cu  Genz3_6D.cu  Genz3_8D.cu  Genz4_5D.cu  Genz4_5Dfloat.cu  Genz4_8D.cu  Genz4_8Dfloat.cu  Genz5_2D.cu  Genz5_5D.cu  Genz5_8D.cu  Genz6_2D.cu  Genz6_6D.cu  Genz6_6Dfloat.cu  SinSum5D.cu  SinSum6D.cu  XYZ.cu  absCosSum5D.cu  absCosSum5Dplus1.cu  cudaCuhre.cu  demo_utils.cuh  diagonalRidge2D.cu  genz_1abs_5d.cu  scalarIntegrandSigma.cu  sigMiscent.cu
cudaPagani/integrands/: hmf_t.cuh  scalarIntegrandSigma.cuh  sig_miscent.cuh  sig_sum.cuh
cudaPagani/quad/: quad.h
cudaPagani/tests/: BoxIntegrals.cu  CMakeLists.txt  CuhrePointsEvaluation.cu  FourthDividedDifference.cu  HMF_t.dump  Interpolation.cu  Interpolation1D.cu  Interpolation2D.cu  NanIntegral.cu  Reduction.cu  RegionSampling.cu  StatefulIntegrand.cu  cudaUnifiedArray.cu  do_integration_from_c.cu  hello.cu  model.cc  model.cu  model.cuh  model.hh  pagani_loop_test.cu  test_cpu_vs_gpu.cu  test_cuhre_convergence.cu  test_integration_from_c.c  test_volume.cu  unified_mem_loop.cu
dpct-exp/: CMakeLists.txt
dpct-exp/cuda/: CMakeLists.txt
kokkos/kokkosPagani/: CMakeLists.txt  main.cpp
kokkosPagani/: CMakeLists.txt  main.cpp
kokkosPagani/demos/: B8_15.cpp  B8_22.cpp  CMakeLists.txt  Genz1_8D.cpp  Genz2_2D.cpp  Genz3_3D.cpp  Genz3_8D.cpp  Genz4_5D.cpp  Genz4_8D.cpp  Genz5_5D.cpp  Genz5_8D.cpp  Genz6_2D.cpp  Genz6_6D.cpp  Init_Region_Pool.cpp  demo_utils.cuh
kokkosPagani/quad/: #Phases.cuh#  .#Phases.cuh  Cuhre.cuh  Interp1D.cuh  Interp1D.h  Interp2D.h  Kernel.cuh  Phases.cuh  Rule.cuh  Sample.cuh  func.cuh  quad.h
kokkosPagani/tests/: CMakeLists.txt  GenerateInitialRegions.cpp  Interpolation1D.cpp  Interpolation2D.cpp  MemoryUsage.cpp  RegionSampling.cpp
newInterfaceCudaCuhre/: CMakeLists.txt  cudaCuhre.cu  function.cu
newInterfaceCudaCuhre/demos/: B8_15.cu  B8_22.cu  CMakeLists.txt  Gauss9D.cu  Genz1_8D.cu  Genz2_2D.cu  Genz2_6D.cu  Genz2_8D.cu  Genz3_3D.cu  Genz3_6D.cu  Genz3_8D.cu  Genz4_5D.cu  Genz4_8D.cu  Genz5_2D.cu  Genz5_5D.cu  Genz5_8D.cu  Genz6_2D.cu  Genz6_6D.cu  SinSum6D.cu  demo_utils.cuh  diagonalRidge2D.cu  scalarIntegrandSigma.cu  sigMiscent.cu
newInterfaceCudaCuhre/quad/: quad.h
oneAPI/: CMakeLists.txt
oneAPI/cuda/: CMakeLists.txt
oneAPI/dpct_latest/: CMakeLists.txt
oneAPI/mcubes/: CMakeLists.txt  cudaArchUtil.h  cudaArray.dp.hpp  cudaDebugUtil.h  cuhreResult.dp.hpp  demo_utils.dp.hpp  func.dp.hpp  quad.h  seqCodesDefs.hh  vegasT.dp.hpp  vegasT1D.dp.hpp  vegas_utils.dp.hpp  verbose_utils.dp.hpp
oneAPI/pagani/: CMakeLists.txt
origcudaCuhre/: CMakeLists.txt  cudaCuhre.cu  function.cu
origcudaCuhre/quad/: deviceProp.h  quad.h
test/: CMakeLists.txt
test/cuda/: CMakeLists.txt
test/kokkos/: CMakeLists.txt
test/oneAPI/: CMakeLists.txt
vegas/: CMakeLists.txt  RZU.cuh  drivervegasM.h  mcubes.cuh  mcubes1D.cuh  mcubesSeq.hh  nrutil.h  seqCodesDefs.hh  vegas.h  vegasNRC.cuh  vegasNRC.hh  vegasSeqMcubes.hh  vegasT.cuh  vegasT1D.cuh  vegas_mcubes.cuh  vegas_mcubesT.cuh  vegas_mcubes_1DT.cuh
vegas/Original/: app  vegas1D  vegas_mcubes  vegas_mcubes.cu  vegas_mcubes_1D.cu
vegas/demos/: CMakeLists.txt  Gauss9D.cu  Genz1_8D.cu  Genz2_6D.cu  Genz3_3D.cu  Genz3_6D.cu  Genz3_8D.cu  Genz4_5D.cu  Genz4_8D.cu  Genz5_2D.cu  Genz5_5D.cu  Genz5_8D.cu  Genz6_2D.cu  Genz6_6D.cu  SinSum6D.cu  demo_utils.cuh  seqGenz3_3D.cu  sigMiscent.cu  test.cu  vegasCPU.cc  vegasGPU.cu
vegas/tests/: CMakeLists.txt  kernel_reduction.cu
vegas/util/: RandomNumberGenerator.cuh  Volume.cuh  cudaApply.cuh  func.cuh  util.cuh  vegas_utils.cuh  verbose_utils.cuh
y3_cluster_cpp/: CMakeLists.txt  README.md
y3_cluster_cpp/data/: DV_DO_DZ_t.dump  HMF_t.dump  LO_LC_t.dump  MOR_DES_t.dump  ROFFSET_t.dump  points.dump
y3_cluster_cpp/models/: CMakeLists.txt  angle_to_dist_t.hh  average_sci_t.hh  dv_do_dz_t.hh  ez.hh  ez_sq.hh  hmf_t.hh  int_lc_lt_des_t.cc  int_lc_lt_des_t.hh  int_zo_zt_des_t.hh  int_zo_zt_t.hh  lc_lt_t.cc  lc_lt_t.hh  lo_lc_t.hh  mor_des_t.cc  mor_des_t.hh  mor_sdss_t.cc  (+6 more)
(+1230 files in other folders)
